unpackaged/main/default/objects/Opportunity/fields/Account_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Account_Identifier__c</fullName>
    <formula>Account.Account_Identifier__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Identifier</label>
    <type>Text</type>
</CustomField>