unpackaged/main/default/objects/Opportunity/fields/Accounting_Audit_Completed_by__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Audit_Completed_by__c</fullName>
    <label>Accounting Audit Completed by</label>
    <length>255</length>
    <type>Text</type>
</CustomField>