unpackaged/main/default/objects/Opportunity/fields/Accounting_Audit_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Audit_Completed_Date__c</fullName>
    <label>Accounting Audit Completed Date</label>
    <type>DateTime</type>
</CustomField>