unpackaged/main/default/objects/Opportunity/fields/Accounts_Receivable__c.field-meta.xml
<CustomField>
    <fullName>Accounts_Receivable__c</fullName>
    <description>Accounts Receivable field for Accounting.</description>
    <formula>Actual_Equip_Cost__c -  Discount_PV_For_Actual__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Accounts Receivable field for Accounting.</inlineHelpText>
    <label>Accounts Receivable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>