unpackaged/main/default/objects/Opportunity/fields/ACH__c.field-meta.xml
<CustomField>
    <fullName>ACH__c</fullName>
    <defaultValue>false</defaultValue>
    <description>ACH for actual</description>
    <inlineHelpText>ACH for actual</inlineHelpText>
    <label>ACH</label>
    <type>Checkbox</type>
</CustomField>