unpackaged/main/default/objects/Opportunity/fields/ACH_Debit_Amount__c.field-meta.xml
<CustomField>
    <fullName>ACH_Debit_Amount__c</fullName>
    <formula>Advanced_Payments_For_Actual__c + Doc_Fee_Collected__c</formula>
    <label>ACH Debit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>