unpackaged/main/default/objects/Opportunity/fields/ACH_Payment_Record_Count__c.field-meta.xml
<CustomField>
    <fullName>ACH_Payment_Record_Count__c</fullName>
    <label>ACH Payment Record Count</label>
    <summaryForeignKey>ACH_Payment__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>