unpackaged/main/default/objects/Opportunity/fields/ACH_QUALIFIED__c.field-meta.xml
<CustomField>
    <fullName>ACH_QUALIFIED__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Customer is qualified for ACH if box is checked</description>
    <inlineHelpText>Check box if customer has qualified for ACH.</inlineHelpText>
    <label>ACH Qualified</label>
    <type>Checkbox</type>
</CustomField>