unpackaged/main/default/objects/Opportunity/fields/ACH_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>ACH_Start_Date__c</fullName>
    <label>ACH Start Date</label>
    <type>Date</type>
</CustomField>