unpackaged/main/default/objects/Opportunity/fields/Actual_Advanced__c.field-meta.xml
<CustomField>
    <fullName>Actual_Advanced__c</fullName>
    <label>Actual Advanced</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>