unpackaged/main/default/objects/Opportunity/fields/ACTUAL_AMT_COLLECTED__c.field-meta.xml
<CustomField>
    <fullName>ACTUAL_AMT_COLLECTED__c</fullName>
    <description>Actual amount collected</description>
    <inlineHelpText>Type in the actual amount collected for this opportunity.</inlineHelpText>
    <label>Actual Amount Collected</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>