unpackaged/main/default/objects/Opportunity/fields/ACTUAL_AMT_OFFERED__c.field-meta.xml
<CustomField>
    <fullName>ACTUAL_AMT_OFFERED__c</fullName>
    <description>Actual amount offered to the customer</description>
    <inlineHelpText>Type in the actual amount offered to the customer in association with this opportunity.</inlineHelpText>
    <label>Actual Amount Offered</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>