unpackaged/main/default/objects/Opportunity/fields/Actual_Buy_Rate__c.field-meta.xml
<CustomField>
    <fullName>Actual_Buy_Rate__c</fullName>
    <description>Actual Lender Buy Rate</description>
    <inlineHelpText>Type in the lender's actual buy rate for this opportunity.</inlineHelpText>
    <label>Actual Buy Rate</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>