unpackaged/main/default/objects/Opportunity/fields/Actual_Daily_Payment__c.field-meta.xml
<CustomField>
    <fullName>Actual_Daily_Payment__c</fullName>
    <description>This field will be the field of record for all booked business loan transactions for Daily Payment Information.</description>
    <inlineHelpText>This field will be the field of record for all booked business loan transactions for Daily Payment Information.</inlineHelpText>
    <label>Actual Daily Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>