unpackaged/main/default/objects/Opportunity/fields/Actual_Equip_Cost__c.field-meta.xml
<CustomField>
    <fullName>Actual_Equip_Cost__c</fullName>
    <description>Actual Equipment Cost</description>
    <inlineHelpText>Type in the actual equipment cost when opportunity closes.</inlineHelpText>
    <label>Actual Equip Cost</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>