unpackaged/main/default/objects/Opportunity/fields/Actual_Fee_1_Amt__c.field-meta.xml
<CustomField>
    <fullName>Actual_Fee_1_Amt__c</fullName>
    <description>Actual Fee Amount</description>
    <inlineHelpText>Type in the actual amount of the fee associated with an opportunity.</inlineHelpText>
    <label>Actual Fee 1 Amt</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>