unpackaged/main/default/objects/Opportunity/fields/Actual_FPC_Doc_Fee__c.field-meta.xml
<CustomField>
    <fullName>Actual_FPC_Doc_Fee__c</fullName>
    <description>Actual FPC Doc Fee</description>
    <inlineHelpText>Type in the actual doc fee collected from a Closed-Won opportunity.</inlineHelpText>
    <label>Actual FPC Doc Fee</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>