unpackaged/main/default/objects/Opportunity/fields/Actual_FPC_Fees__c.field-meta.xml
<CustomField>
    <fullName>Actual_FPC_Fees__c</fullName>
    <label>Actual FPC Fees</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>