unpackaged/main/default/objects/Opportunity/fields/Actual_FPC_Internal_Doc_Fee__c.field-meta.xml
<CustomField>
    <fullName>Actual_FPC_Internal_Doc_Fee__c</fullName>
    <label>Actual FPC Internal Doc Fee</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>