unpackaged/main/default/objects/Opportunity/fields/Actual_FPC_Margin__c.field-meta.xml
<CustomField>
    <fullName>Actual_FPC_Margin__c</fullName>
    <description>Actual FPC Margin</description>
    <inlineHelpText>Type in the actual FPC resulting from a Closed-Won opportunity.</inlineHelpText>
    <label>Actual FPC Margin</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>