unpackaged/main/default/objects/Opportunity/fields/Actual_FPC_Margin_w_o_Doc_Fee__c.field-meta.xml
<CustomField>
    <fullName>Actual_FPC_Margin_w_o_Doc_Fee__c</fullName>
    <description>This field will calculate the margin due to FPC not taking into account the lender doc fee.</description>
    <formula>IF(  AND( DATEVALUE(Fund_Date__c) &lt;   DATE(2012,10,17) , Lender_Account__c = "0018000000nfYbl"),  ACTUAL_AMT_COLLECTED__c   *  (Actual_Points_Earned__c/100), ACTUAL_AMT_OFFERED__c  *  (Actual_Points_Earned__c/100))</formula>
    <inlineHelpText>This field will calculate the margin due to FPC not taking into account the lender doc fee.</inlineHelpText>
    <label>Actual FPC Margin w/o Doc Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>