unpackaged/main/default/objects/Opportunity/fields/Actual_Lender_Fees__c.field-meta.xml
<CustomField>
    <fullName>Actual_Lender_Fees__c</fullName>
    <description>Actual lender fees</description>
    <inlineHelpText>Type in the actual lender fees resulting from a Closed-Won opportunity.</inlineHelpText>
    <label>Actual Lender Fees</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>