unpackaged/main/default/objects/Opportunity/fields/Actual_Lost_Margin__c.field-meta.xml
<CustomField>
    <fullName>Actual_Lost_Margin__c</fullName>
    <description>Actual lost margin</description>
    <inlineHelpText>Type in the actual lost margin resulting from a Closed-Won opportunity.</inlineHelpText>
    <label>Actual Lost Margin</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>