unpackaged/main/default/objects/Opportunity/fields/ACTUAL_MCA_TERM__c.field-meta.xml
<CustomField>
    <fullName>ACTUAL_MCA_TERM__c</fullName>
    <description>Actual MCA term</description>
    <inlineHelpText>Type in the actual MCA term for this opportunity.</inlineHelpText>
    <label>Actual Merchant Term</label>
    <length>10</length>
    <type>Text</type>
</CustomField>