unpackaged/main/default/objects/Opportunity/fields/Actual_Monthly_Payment__c.field-meta.xml
<CustomField>
    <fullName>Actual_Monthly_Payment__c</fullName>
    <description>Actual lease monthly payment.</description>
    <inlineHelpText>Type in the lessee's actual monthly payment.</inlineHelpText>
    <label>Actual Monthly Payment</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>