unpackaged/main/default/objects/Opportunity/fields/Actual_Monthly_Pmt_No_Tax__c.field-meta.xml
<CustomField>
    <fullName>Actual_Monthly_Pmt_No_Tax__c</fullName>
    <description>Actual Monthly Payment without tax calculated into it.</description>
    <inlineHelpText>Type in the actual monthly payment without tax.</inlineHelpText>
    <label>Actual Monthly Pmt No Tax</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>