unpackaged/main/default/objects/Opportunity/fields/Actual_Num_Payments_Disc__c.field-meta.xml
<CustomField>
    <fullName>Actual_Num_Payments_Disc__c</fullName>
    <description>Actual number of monthly lease payments.</description>
    <inlineHelpText>Type in the actual number of lease payments to be made by the lessee.</inlineHelpText>
    <label>Actual Num Payments Disc</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>