unpackaged/main/default/objects/Opportunity/fields/Actual_Origination_Fee__c.field-meta.xml
<CustomField>
    <fullName>Actual_Origination_Fee__c</fullName>
    <description>This field will be the field of record for all booked business loan transactions for Origination Fee.</description>
    <inlineHelpText>This field will be the field of record for all booked business loan transactions for Origination Fee.</inlineHelpText>
    <label>Actual Origination Fee ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>