unpackaged/main/default/objects/Opportunity/fields/Actual_Origination_Fee_percent__c.field-meta.xml
<CustomField>
    <fullName>Actual_Origination_Fee_percent__c</fullName>
    <label>Actual Origination Fee (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>