unpackaged/main/default/objects/Opportunity/fields/Actual_Points_Earned__c.field-meta.xml
<CustomField>
    <fullName>Actual_Points_Earned__c</fullName>
    <description>Actual Point Earned</description>
    <inlineHelpText>Type in the actual number of points earned from a Closed-Won opportunity.</inlineHelpText>
    <label>Actual Points Earned</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>