unpackaged/main/default/objects/Opportunity/fields/Actual_Proceeds_For_Actual__c.field-meta.xml
<CustomField>
    <fullName>Actual_Proceeds_For_Actual__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Actual Proceeds for actual</description>
    <inlineHelpText>Actual Proceeds for actual</inlineHelpText>
    <label>Actual Proceeds 1</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>