unpackaged/main/default/objects/Opportunity/fields/Actual_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Actual_Ratio__c</fullName>
    <description>This field captures the actual ratio associated with a merchant transaction.</description>
    <inlineHelpText>This field captures the actual ratio associated with a merchant transaction.</inlineHelpText>
    <label>Actual WC Sell Rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>