unpackaged/main/default/objects/Opportunity/fields/Actual_Residual_Ownership__c.field-meta.xml
<CustomField>
    <fullName>Actual_Residual_Ownership__c</fullName>
    <description>This will be the field of record for end of term option for booked lease deals.</description>
    <inlineHelpText>This will be the field of record for end of term option for booked lease deals.</inlineHelpText>
    <label>Actual Residual Ownership</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FMV</fullName>
            </value>
            <value>
                <fullName>FMV - 10%</fullName>
            </value>
            <value>
                <fullName>FMV - 15%</fullName>
            </value>
            <value>
                <fullName>FMV - 20%</fullName>
            </value>
            <value>
                <fullName>FMV - NR</fullName>
            </value>
            <value>
                <fullName>FMV - TRL</fullName>
            </value>
            <value>
                <fullName>10% PUT</fullName>
            </value>
            <value>
                <fullName>$1BO</fullName>
            </value>
            <value>
                <fullName>$101BO</fullName>
            </value>
            <value>
                <fullName>$125 BO</fullName>
            </value>
            <value>
                <fullName>EFA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>