unpackaged/main/default/objects/Opportunity/fields/Actual_Settlement_Rate__c.field-meta.xml
<CustomField>
    <fullName>Actual_Settlement_Rate__c</fullName>
    <description>The settlement rate used in the lease</description>
    <inlineHelpText>The settlement rate used in the lease</inlineHelpText>
    <label>Actual Settlement Rate</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>