unpackaged/main/default/objects/Opportunity/fields/Actual_Split_Margin__c.field-meta.xml
<CustomField>
    <fullName>Actual_Split_Margin__c</fullName>
    <description>Actual split margin</description>
    <inlineHelpText>Type in the actual split margin for the owner of the opportunity and other rep who gets credit for the Closed-Won opportunity.</inlineHelpText>
    <label>Actual Split Margin</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>