unpackaged/main/default/objects/Opportunity/fields/Actual_Tax_Rate__c.field-meta.xml
<CustomField>
    <fullName>Actual_Tax_Rate__c</fullName>
    <description>Actual Tax Rate</description>
    <inlineHelpText>Type in the actual tax rate for the opportunity.</inlineHelpText>
    <label>Actual Tax Rate</label>
    <precision>11</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>