unpackaged/main/default/objects/Opportunity/fields/Actual_Term__c.field-meta.xml
<CustomField>
    <fullName>Actual_Term__c</fullName>
    <description>Actual term</description>
    <inlineHelpText>Type in the actual term of a Closed-Won opportunity.</inlineHelpText>
    <label>Actual Term</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>