unpackaged/main/default/objects/Opportunity/fields/Actual_WC_Buy_Rate__c.field-meta.xml
<CustomField>
    <fullName>Actual_WC_Buy_Rate__c</fullName>
    <label>Actual WC Buy Rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>