unpackaged/main/default/objects/Opportunity/fields/Actuals_Audit_Complete__c.field-meta.xml
<CustomField>
    <fullName>Actuals_Audit_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will indicate when the operations department has audited the information and made necessary adjustments to the actuals.  It will be the trigger that indicates to accounting that the funded opportunity is ready to be imported into Lease Plus.</description>
    <inlineHelpText>This field will indicate when the operations department has audited the information and made necessary adjustments to the actuals.  It will be the trigger that indicates to accounting that the funded opportunity is ready to be imported into Lease Plus.</inlineHelpText>
    <label>Actuals Audit Complete</label>
    <type>Checkbox</type>
</CustomField>