unpackaged/main/default/objects/Opportunity/fields/Add_to_Campaign_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Add_to_Campaign_Renewal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Add to Campaign Renewal</label>
    <type>Checkbox</type>
</CustomField>