unpackaged/main/default/objects/Opportunity/fields/Addr_Bill1__c.field-meta.xml
<CustomField>
    <fullName>Addr_Bill1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Physical Address for Account or Contact</description>
    <inlineHelpText>Select the Physical Address for Account or Contact</inlineHelpText>
    <label>Physical Address</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>FPC_Address__c.Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <filterItems>
            <field>FPC_Address__c.Contact__r.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <infoMessage>Select the Physical Address to use for this Opportunity</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>FPC_Address__c</referenceTo>
    <relationshipLabel>Opportunities (AddressID2)</relationshipLabel>
    <relationshipName>Opportunities3</relationshipName>
    <type>Lookup</type>
</CustomField>