unpackaged/main/default/objects/Opportunity/fields/Advanced_Payments_For_Actual__c.field-meta.xml
<CustomField>
    <fullName>Advanced_Payments_For_Actual__c</fullName>
    <description>Advanced_Payments_For_Actual</description>
    <inlineHelpText>IF LENDER.[Discount # Of Pmts] &gt; 0 THEN
 [Discount # Pmts] * [Monthly Pmt];
ELSE
 0;</inlineHelpText>
    <label>Advanced Payments</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>