unpackaged/main/default/objects/Opportunity/fields/Affiliated__c.field-meta.xml
<CustomField>
    <fullName>Affiliated__c</fullName>
    <description>This field is used primarily in the AMI Electronic Prequal process.  This field will indicate if an account has multiple locations and multiple opportunities.</description>
    <inlineHelpText>If there are multiple locations that are being prequaled from an account/company select yes.  If it is a single location, select no.</inlineHelpText>
    <label>Affiliated</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>