unpackaged/main/default/objects/Opportunity/fields/Amount_Collected__c.field-meta.xml
<CustomField>
    <fullName>Amount_Collected__c</fullName>
    <description>The amount to be collected on MCA and Alt Deals</description>
    <label>Amount Collected</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>