unpackaged/main/default/objects/Opportunity/fields/Amount_Offered__c.field-meta.xml
<CustomField>
    <fullName>Amount_Offered__c</fullName>
    <description>the amount offered on an MCA &amp; Alt Deals</description>
    <label>Amount Doc'd</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>