unpackaged/main/default/objects/Opportunity/fields/Analyst_Assignment_Link__c.field-meta.xml
<CustomField>
    <fullName>Analyst_Assignment_Link__c</fullName>
    <formula>HYPERLINK('/flow/Opportunity_Internal_Credit_Analyst_Assign_To_Flow?inputOpptyId='&amp;Id + '&amp;retURL='&amp;Id, "Assign to Me", '_self')</formula>
    <label>Analyst Assignment Link</label>
    <type>Text</type>
</CustomField>