unpackaged/main/default/objects/Opportunity/fields/Analyst_List_Formula__c.field-meta.xml
<CustomField>
    <fullName>Analyst_List_Formula__c</fullName>
    <formula>IF( 
  OR(
       Credit_Analyst__c  = $User.Id,  
       Internal_Credit_Analyst__c  = $User.Id,  
       Commercial_Analyst__c  = $User.Id), 1, 0)</formula>
    <label>Analyst List Formula</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>