unpackaged/main/default/objects/Opportunity/fields/Annual_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Annual_Revenue__c</fullName>
    <description>This field will capture the Annual Revenue associated with the Opportunity.  It is a formula field.</description>
    <formula>BLANKVALUE( Annual_Revenue_Multiple_Locations__c , Account.AnnualRevenue )</formula>
    <inlineHelpText>This field will capture the Annual Revenue associated with the Opportunity.  It is a formula field.</inlineHelpText>
    <label>Annual Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>