unpackaged/main/default/objects/Opportunity/fields/Annual_Sales_Last_Year__c.field-meta.xml
<CustomField>
    <fullName>Annual_Sales_Last_Year__c</fullName>
    <description>Annual Sales Last year</description>
    <label>Annual Sales Last Year</label>
    <length>32</length>
    <type>Text</type>
</CustomField>