unpackaged/main/default/objects/Opportunity/fields/Annual_Visa_MC_Volume__c.field-meta.xml
<CustomField>
    <fullName>Annual_Visa_MC_Volume__c</fullName>
    <description>Annuall Visa/MC total volume</description>
    <inlineHelpText>Annuall Visa/MC total volume</inlineHelpText>
    <label>Annual Visa/MC Volume</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>