unpackaged/main/default/objects/Opportunity/fields/Approval_Amount__c.field-meta.xml
<CustomField>
    <fullName>Approval_Amount__c</fullName>
    <description>Approval amount associated with an opportunity.</description>
    <inlineHelpText>Type in the approval amount associated with an opportunity.</inlineHelpText>
    <label>Maximum Approval Amount</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>