unpackaged/main/default/objects/Opportunity/fields/Approval_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Approval_Expiration_Date__c</fullName>
    <description>Approval Expiration Date</description>
    <label>Approval Expiration Date</label>
    <type>Date</type>
</CustomField>