unpackaged/main/default/objects/Opportunity/fields/Approved__c.field-meta.xml
<CustomField>
    <fullName>Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will indicate if a deal has been approved with any lender and will be used in reporting.  It will be updated by workflow.</description>
    <inlineHelpText>This field will indicate if a deal has been approved with any lender and will be used in reporting.  It will be updated by workflow.</inlineHelpText>
    <label>Approved</label>
    <type>Checkbox</type>
</CustomField>