unpackaged/main/default/objects/Opportunity/fields/Audit_Required__c.field-meta.xml
<CustomField>
    <fullName>Audit_Required__c</fullName>
    <description>Remove after Oppty Audit is complete.</description>
    <label>Audit Required</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Lease Audit</fullName>
            </value>
            <value>
                <fullName>Done</fullName>
            </value>
            <value>
                <fullName>Campaign Influence</fullName>
            </value>
            <value>
                <fullName>Docs Payment/Origination</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>