unpackaged/main/default/objects/Opportunity/fields/Average_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Average_Ticket__c</fullName>
    <description>Average Number of Credit Card Transactions</description>
    <inlineHelpText>Average Number of Credit Card Transactions</inlineHelpText>
    <label>Average Ticket</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>