unpackaged/main/default/objects/Opportunity/fields/Balance_Paid__c.field-meta.xml
<CustomField>
    <fullName>Balance_Paid__c</fullName>
    <description>Sum of all successful payments to date for an internal FPC deal.</description>
    <inlineHelpText>Sum of all successful payments to date for an internal FPC deal.</inlineHelpText>
    <label>Balance Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>