unpackaged/main/default/objects/Opportunity/fields/Balance_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Balance_Remaining__c</fullName>
    <description>Actual Amount Collected – Balance Paid.  This field will be updated from LP.</description>
    <inlineHelpText>Actual Amount Collected – Balance Paid.  This field will be updated from LP.</inlineHelpText>
    <label>Balance Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>