unpackaged/main/default/objects/Opportunity/fields/Balance_Remaining_Percent__c.field-meta.xml
<CustomField>
    <fullName>Balance_Remaining_Percent__c</fullName>
    <description>(Actual Amount Collected – Balance Paid)/Actual Amount Collected.   Updated by LP.</description>
    <inlineHelpText>(Actual Amount Collected – Balance Paid)/Actual Amount Collected.   Updated by LP.</inlineHelpText>
    <label>Balance Remaining (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>