unpackaged/main/default/objects/Opportunity/fields/Bank_2_City__c.field-meta.xml
<CustomField>
    <fullName>Bank_2_City__c</fullName>
    <label>Bank 2 City</label>
    <length>64</length>
    <type>Text</type>
</CustomField>