unpackaged/main/default/objects/Opportunity/fields/Bank_2_Name__c.field-meta.xml
<CustomField>
    <fullName>Bank_2_Name__c</fullName>
    <label>Bank 2 Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>