unpackaged/main/default/objects/Opportunity/fields/Bank_2_Phone__c.field-meta.xml
<CustomField>
    <fullName>Bank_2_Phone__c</fullName>
    <label>Bank 2 Phone</label>
    <length>32</length>
    <type>Text</type>
</CustomField>