unpackaged/main/default/objects/Opportunity/fields/Bank_2_Routing_Number__c.field-meta.xml
<CustomField>
    <fullName>Bank_2_Routing_Number__c</fullName>
    <label>Bank 2 Routing Number</label>
    <length>32</length>
    <type>Text</type>
</CustomField>