unpackaged/main/default/objects/Opportunity/fields/Bank_2_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Bank_2_Zip_Code__c</fullName>
    <label>Bank 2 Zip Code</label>
    <length>16</length>
    <type>Text</type>
</CustomField>