unpackaged/main/default/objects/Opportunity/fields/Bank_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account_Number__c</fullName>
    <description>Customer's Bank account number.</description>
    <inlineHelpText>Type in the customer's bank account number.</inlineHelpText>
    <label>Bank Account Number</label>
    <length>32</length>
    <type>Text</type>
</CustomField>