unpackaged/main/default/objects/Opportunity/fields/BANK_CITY__c.field-meta.xml
<CustomField>
    <fullName>BANK_CITY__c</fullName>
    <description>The city that the lessee's bank is located in.</description>
    <inlineHelpText>Type in the city that the lessee's bank is located in.</inlineHelpText>
    <label>Bank City</label>
    <length>64</length>
    <type>Text</type>
</CustomField>