unpackaged/main/default/objects/Opportunity/fields/Bank_Phone__c.field-meta.xml
<CustomField>
    <fullName>Bank_Phone__c</fullName>
    <description>Customer's bank phone number</description>
    <inlineHelpText>Type in the phone numbr of the customer's bank.</inlineHelpText>
    <label>Bank Phone</label>
    <length>32</length>
    <type>Text</type>
</CustomField>