unpackaged/main/default/objects/Opportunity/fields/Bank_Routing_Number__c.field-meta.xml
<CustomField>
    <fullName>Bank_Routing_Number__c</fullName>
    <description>Merchant's Bank Routing number</description>
    <inlineHelpText>Type in the merchants bank routing number.</inlineHelpText>
    <label>Bank Routing Number</label>
    <length>32</length>
    <type>Text</type>
</CustomField>