unpackaged/main/default/objects/Opportunity/fields/Bank_State__c.field-meta.xml
<CustomField>
    <fullName>Bank_State__c</fullName>
    <description>Bank State</description>
    <inlineHelpText>Enter the State of Bank</inlineHelpText>
    <label>Bank State</label>
    <length>2</length>
    <type>Text</type>
</CustomField>