unpackaged/main/default/objects/Opportunity/fields/BANK_ZIPCODE__c.field-meta.xml
<CustomField>
    <fullName>BANK_ZIPCODE__c</fullName>
    <description>The zip code for the lessee's bank.</description>
    <inlineHelpText>Type in the zip code that the lessee's bank is located in.</inlineHelpText>
    <label>Bank Zip Code</label>
    <length>16</length>
    <type>Text</type>
</CustomField>