unpackaged/main/default/objects/Opportunity/fields/Bill_for_Prefund__c.field-meta.xml
<CustomField>
    <fullName>Bill_for_Prefund__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bill for Prefund</label>
    <type>Checkbox</type>
</CustomField>