unpackaged/main/default/objects/Opportunity/fields/BofI_Deal__c.field-meta.xml
<CustomField>
    <fullName>BofI_Deal__c</fullName>
    <description>This field will indicate if this deal will be bought under BofI Federal Bank.</description>
    <inlineHelpText>This field will indicate if this deal will be bought under BofI Federal Bank.</inlineHelpText>
    <label>BofI Deal</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>